# yam_moveit

./: .gitignore  README.md
bimanual/rtop_description/: CMakeLists.txt  README.md  package.xml
bimanual/rtop_description/launch/: robot_state_publisher.launch.py  urdf_publisher.launch.py
bimanual/rtop_description/meshes/: body.mtl  body_design.mtl  top_camera.mtl
bimanual/rtop_description/urdf/: rtop.urdf  rtop.urdf.xacro  rtop_design.urdf  rtop_design.urdf.xacro  rtop_gazebo.urdf.xacro
bimanual/rtop_gazebo/: CMakeLists.txt  package.xml
bimanual/rtop_gazebo/launch/: bringup.gazebo.launch.py  rtop_ctrl.gazebo.launch.py
bimanual/rtop_gazebo/scripts/: control_arm_cli.py  test_arm_movement.py
bimanual/rtop_gazebo/worlds/: empty.world  house.world  pick_and_place_demo.world
bimanual/usd_bimanual/: rtop_ros.usd  rtop_ros_cams.usd  wrist_camera.usd
single/usd_yam_kinematics/: home_return_demo.py  ik_demo.py  spatial_utils.py  traj_opt_demo.py  utils.py  yam.usd  yam_collision_world.usd  yam_ros.usd
single/usd_yam_kinematics/xmls/: yam.xml
single/usd_yam_kinematics/xmls/meshes/: D435.usd  camera_support.step  camera_support.usd
single/yam_arm_description/: CMakeLists.txt  README.md  package.xml
single/yam_arm_description/config/: joint_names_so_arm_urdf.yaml
single/yam_arm_description/launch/: robot_state_publisher.launch.py
single/yam_arm_description/meshes/: D435.mtl  camera_support.stl  converted_model2_808080ff.mtl  converted_model2__10_808080ff.mtl  converted_model2__11_808080ff.mtl  converted_model2__12_808080ff.mtl  converted_model2__13_808080ff.mtl  converted_model2__14_808080ff.mtl  converted_model2__15_808080ff.mtl  converted_model2__16_808080ff.mtl  converted_model2__17_808080ff.mtl  converted_model2__2_808080ff.mtl  converted_model2__3_808080ff.mtl  converted_model2__4_808080ff.mtl  converted_model2__5_808080ff.mtl  converted_model2__6_808080ff.mtl  converted_model2__7_808080ff.mtl  converted_model2__8_808080ff.mtl  converted_model2__9_808080ff.mtl
single/yam_arm_description/urdf/: yam.urdf  yam.urdf.xacro  yam_arm_gazebo.urdf.xacro  yam_arm_gazebo_macro.xacro  yam_arm_macro.xacro  yam_cam.urdf  yam_cam.urdf.xacro
single/yam_arm_gazebo/: CMakeLists.txt  package.xml
single/yam_arm_gazebo/launch/: bringup.gazebo.launch.py  yam_ctrl.gazebo.launch.py
single/yam_arm_gazebo/scripts/: control_arm_cli.py  teleop_arm.py
single/yam_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
single/yam_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  yam_calib.ros2_control.xacro  yam_calib.srdf  yam_calib.urdf.xacro
single/yam_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  yam_arm_moveit_gazebo.launch.py
