<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtop_description</name>
  <version>1.0.0</version>
  <description>RTOP Bimanual Robot URDF Resources</description>

  <author email="contact@lycheeai-hub.com">LycheeAI</author>

  <maintainer email="contact@lycheeai-hub.com">LycheeAI</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>yam_arm_description</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
